--- a/css/style.css
+++ b/css/style.css
@@ -222,12 +222,6 @@ body {
     -ms-box-shadow: 0px 2px 7px 0px rgba(0, 0, 0, 0.25);
     -o-box-shadow: 0px 2px 7px 0px rgba(0, 0, 0, 0.25); }
 
-.map-wrapper {
-  height: 177px;
-  margin-bottom: 36px; }
-
-.map-holder {
-  height: 177px; }
 
 .actions ul {
   display: flex; }
@@ -408,3 +402,13 @@ body {
   }
 }
 
+.github-fork-ribbon {
+	width: 100px;
+	text-align: center;
+	font-weight: bold;
+	font-size: 0.8em;
+	padding: 10px;
+	text-decoration: none;
+	position: fixed;
+
+}
